# graphene

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  ca_main.cpp  hh_main.cpp  kmlfile.cpp  kmlfile.h  main.cpp
examples/data/: app_strassennetz_inspire_bab_EPSG_4326.csv  app_strassennetz_inspire_bfs_EPSG_4326.csv  app_strassennetz_inspire_bod_EPSG_4326.csv  app_strassennetz_inspire_eu_EPSG_4326.csv
src/: CMakeLists.txt  export.h  graphene.cpp  graphene.h
test/: CMakeLists.txt  main.cpp
